[package]
authors = ["Ross MacArthur <ross@macarthur.io>"]
description = "A parser for the Radiotap capture format. See http://www.radiotap.org."
edition = "2018"
homepage = "https://github.com/rossmacarthur/radiotap"
keywords = ["frame", "packet", "parsing", "pcap", "radiotap", "wifi"]
license = "Apache-2.0/MIT"
name = "radiotap"
readme = "README.md"
repository = "https://github.com/rossmacarthur/radiotap"
version = "1.3.0"

[dependencies]
bitops = "0.1.0"
byteorder = "1.3.4"
quick-error = "2.0.0"

[dev-dependencies]
pcap = "0.7.0"
