[package]
authors = ["Ross MacArthur <ross@macarthur.io>"]
description = "A parser for the radiotap capture format."
edition = "2018"
homepage = "https://github.com/rossmacarthur/radiotap"
keywords = ["frame", "packet", "parsing", "pcap", "radiotap", "wifi"]
license = "Apache-2.0/MIT"
name = "radiotap"
readme = "README.md"
repository = "https://github.com/rossmacarthur/radiotap"
version = "1.3.0"

[dependencies]
bitflags = "1.2.1"
thiserror = "1.0.20"

[dev-dependencies]
hex = "0.4.2"
pcap = "0.7.0"
