[package]
name = "radiotap"
version = "1.3.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "A parser for the radiotap capture format."
readme = "README.md"
homepage = "https://github.com/rossmacarthur/radiotap"
repository = "https://github.com/rossmacarthur/radiotap"
license = "MIT OR Apache-2.0"
keywords = ["frame", "packet", "parsing", "pcap", "radiotap", "wifi"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[dependencies]
bitflags = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1.0.32"
hex = "0.4.2"
pcap = "0.7.0"
